add BitCoin Solo Mining Section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,12 @@
     "cSpell.words": [
         "bitstream",
         "Bitstreams",
+        "compr",
+        "EEPROM",
+        "getinfo",
+        "hashrate",
+        "icecompr",
+        "Mbit",
         "Nyan"
     ]
 }
